# hastra-sol-vault

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  tsconfig.json
.github/: verify-config.env
.github/scripts/: export_verify_pda_txs_ci.sh
.github/workflows/: build.yml  codeql.yml  main-verify.yml  pr-validation.yml  release.yml
docker/: Dockerfile  README.md  build.sh
programs/vault-mint/: Cargo.toml
programs/vault-mint/src/: account_structs.rs  error.rs  events.rs  guard.rs  lib.rs  processor.rs  state.rs
programs/vault-stake/: Cargo.toml
programs/vault-stake-auto/: Cargo.toml
programs/vault-stake/src/: account_structs.rs  error.rs  events.rs  guard.rs  lib.rs  processor.rs  state.rs
scripts/: b58-encode-id-file.ts  common.sh  config.sh  create-memo-proposal.ts  cryptolib.ts  deploy.sh  derive_address.ts  export_verify_pda_tx.sh  extend_program.ts  localnet-usdc.sh  migrate_reward_config.ts  migrate_reward_config_proposal_squads_v3.ts  migrate_stake_config_pda_proposal_squads_v3.ts  register_meta.ts  run-tests.sh  setup-tokens.sh  tx-inspect.ts
scripts/localnet/: initialize-local-validator.ts  initialize_price_config.ts  local_validator_config.ts  publish_rewards.ts  redeem.ts  refresh_stake_test_price.ts
scripts/vault-mint/: claim_rewards.ts  claim_rewards_v2.ts  complete_redeem.ts  create_rewards_epoch.ts  deposit.ts  derive_vault_token_account_config.ts  fetch_config.ts  fetch_external_mint_pdas.ts  fetch_vault_token_account_config.ts  pause.ts  (+18 more)
tests/: helpers.ts  vault-mint.test.ts  vault-stake-auto.test.ts  vault-stake.test.ts
(+74 files in other folders)
