[package]
name = "vault-mint"
version = "0.1.0"
description = "Solana Vault Mint Contract for Hastra"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
cpi = ["no-entrypoint"]
no-entrypoint = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
custom-heap = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-panic = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
bincode = "1.3.3"
hex = "0.4.3"
