[package]
name = "vault-stake"
version = "0.1.0"
description = "Solana Vault Stake Contract for Hastra"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
# Pool selection — exactly one pool-* feature must be active per build.
# Default is pool-prime so anchor build / anchor test work without extra flags.
default = ["pool-prime"]
pool-prime = []
pool-auto = []
pool-auto-devnet = []
pool-smb = []

cpi = ["no-entrypoint"]
no-entrypoint = []
anchor-debug = []
no-idl = []
no-log-ix-name = []
custom-heap = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
custom-panic = []
testing = []

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = "0.31.1"
bincode = "1.3.3"
vault-mint = { path = "../vault-mint", features = ["cpi"] }
chainlink_solana_data_streams = { git = "https://github.com/smartcontractkit/chainlink-data-streams-solana" }
chainlink-data-streams-report = "1.0.3"
num-traits = "0.2"

